# Core_MPlusM

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Doxyfile  LICENSE.md  M+M Sequence.graffle  M+M ServiceViewer.graffle  M+M States.graffle  M+M Structure.graffle  M+M.path  M_M Movement Database.graffle  MpMConfig.cmake  PROVENANCE.md  README.md  README.txt  ReleaseNotes.md  SUPPORT.md  after-ace-install.sh  after-spidermonkey-install.sh  after-yarp-build.sh  debug.txt  futureFeatures.rtf  install_manifest_applications.txt  install_manifest_examples.txt  install_manifest_headers.txt  install_manifest_libraries.txt  launchExamples.sh  license.txt  longlines.sh  m+mConfigVersion.cmake.in  replace-links.sh  sloc.sh  standardApplications.txt  startRegSvc.sh  startReqSvc.sh  todo.rtf  todo.txt  uninstallM+M.sh
CPack/: CMakeLists.txt
Common/: CMakeLists.txt  CTestTestfile.cmake  CommonTest  M+MAdapterChannel.cpp  M+MAdapterChannel.h  M+MBailOut.cpp  M+MBailOut.h  M+MBailOutThread.cpp  M+MBailOutThread.h  M+MBaseAdapterData.cpp  M+MBaseAdapterData.h  M+MBaseClient.cpp  M+MBaseClient.h  M+MBaseContext.cpp  M+MBaseContext.h  M+MBaseFilterService.cpp  M+MBaseFilterService.h  M+MBaseInputOutputClient.cpp  M+MBaseInputOutputClient.h  M+MBaseInputOutputService.cpp  M+MBaseInputOutputService.h  M+MBaseInputService.cpp  M+MBaseInputService.h  M+MBaseOutputService.cpp  M+MBaseOutputService.h  M+MBaseRequestHandler.cpp  M+MBaseRequestHandler.h  M+MBaseService.cpp  M+MBaseService.h  M+MBaseServiceInputHandler.cpp  M+MBaseServiceInputHandler.h  M+MBaseServiceInputHandlerCreator.cpp  M+MBaseServiceInputHandlerCreator.h  M+MChannelStatusReporter.cpp  M+MChannelStatusReporter.h  M+MChannelsRequestHandler.cpp  M+MChannelsRequestHandler.h  M+MClientChannel.cpp  M+MClientChannel.h  M+MClientsRequestHandler.cpp  (+157 more)
CommonLisp/: CMakeLists.txt  MergeChannels.lisp  RandomBurst.lisp  ReadFile.lisp  RecordIntegers.lisp  RunningSum.lisp  SampleScript.lisp  TruncateFloat.lisp  m+mCommonLispCommon.h  m+mCommonLispFilterCommon.h  m+mCommonLispFilterCommon.hpp  m+mCommonLispFilterInputHandler.cpp  m+mCommonLispFilterInputHandler.h  m+mCommonLispFilterInputHandler.hpp  m+mCommonLispFilterRequests.h  m+mCommonLispFilterRequests.hpp  m+mCommonLispFilterService.cpp  m+mCommonLispFilterService.h  m+mCommonLispFilterService.hpp  m+mCommonLispFilterService.rc.in  m+mCommonLispFilterServiceMain.cpp  m+mCommonLispFilterThread.cpp  m+mCommonLispFilterThread.h  m+mCommonLispFilterThread.hpp  m+mCommonLispInputHandler.cpp  m+mCommonLispInputHandler.h  m+mCommonLispRequests.h  m+mCommonLispService.cpp  m+mCommonLispService.h  m+mCommonLispService.rc.in  m+mCommonLispServiceMain.cpp  m+mCommonLispThread.cpp  m+mCommonLispThread.h  resource.h
CommonTests/: CMakeLists.txt  M+MCommonTest.cpp  M+MTest03Handler.cpp  M+MTest03Handler.h  M+MTest04Handler.cpp  M+MTest04Handler.h  M+MTest05Handler.cpp  M+MTest05Handler.h  M+MTest05HandlerCreator.cpp  M+MTest05HandlerCreator.h  M+MTest08Handler.cpp  M+MTest08Handler.h  M+MTest09DefaultRequestHandler.cpp  M+MTest09DefaultRequestHandler.h  M+MTest09Service.cpp  M+MTest09Service.h  M+MTest10DefaultRequestHandler.cpp  M+MTest10DefaultRequestHandler.h  M+MTest10Service.cpp  M+MTest10Service.h  M+MTest11EchoRequestHandler.cpp  M+MTest11EchoRequestHandler.h  M+MTest11Service.cpp  M+MTest11Service.h  M+MTest12EchoRequestHandler.cpp  M+MTest12EchoRequestHandler.h  M+MTest12Service.cpp  M+MTest12Service.h  m+mCommonTest  m+mCommonTest.cpp  m+mCommonTest.rc  m+mCommonTest.rc.in  m+mTest03Handler.cpp  m+mTest03Handler.h  m+mTest03Handler.hpp  m+mTest04Handler.cpp  m+mTest04Handler.h  m+mTest04Handler.hpp  m+mTest05Handler.cpp  m+mTest05Handler.h  (+35 more)
Debugging/: CMakeLists.txt  ODLogging.cpp  ODLogging.h  ODLogging.inc  ODLogging.m  ODSyslog.cpp  ODSyslog.h  ODSyslog.inc  ODSyslog.m
ExampleClient/: CMakeLists.txt  CTestTestfile.cmake  ExampleClient  YPPExampleClient  YPPExampleClient.cpp  YPPExampleClient.h  main.cpp
ExampleEchoClient/: CMakeLists.txt  YPPExampleEchoClient.cpp  YPPExampleEchoClient.h  main.cpp
ExampleRandomNumberClient/: CMakeLists.txt  YPPExampleRandomNumberClient.cpp  YPPExampleRandomNumberClient.h  main.cpp
ExampleRandomNumberService/: CMakeLists.txt  YPPExampleRandomNumberRequests.h  YPPExampleRandomNumberService.cpp  YPPExampleRandomNumberService.h  YPPRandomRequestHandler.cpp  YPPRandomRequestHandler.h  main.cpp
Exemplars/: CMakeLists.txt
JavaScript/: CMakeLists.txt  M+MJavaScriptCommon.h  M+MJavaScriptInputHandler.cpp  M+MJavaScriptInputHandler.h  M+MJavaScriptRequests.h  M+MJavaScriptService.cpp  M+MJavaScriptService.h  M+MJavaScriptServiceMain.cpp  M+MJavaScriptThread.cpp  M+MJavaScriptThread.h  MergeChannels.js  RandomBurst.js  ReadFile.js  RecordIntegers.js  RunningSum.js  SampleScript.js  SimpleScript.js  TruncateFloat.js  m+mJavaScriptCommon.h  m+mJavaScriptFilterCommon.h  m+mJavaScriptFilterCommon.hpp  m+mJavaScriptFilterInputHandler.cpp  m+mJavaScriptFilterInputHandler.h  m+mJavaScriptFilterInputHandler.hpp  m+mJavaScriptFilterRequests.h  m+mJavaScriptFilterRequests.hpp  m+mJavaScriptFilterService.cpp  m+mJavaScriptFilterService.h  m+mJavaScriptFilterService.hpp  m+mJavaScriptFilterService.rc.in  m+mJavaScriptFilterServiceMain.cpp  m+mJavaScriptFilterThread.cpp  m+mJavaScriptFilterThread.h  m+mJavaScriptFilterThread.hpp  m+mJavaScriptInputHandler.cpp  m+mJavaScriptInputHandler.h  m+mJavaScriptRequests.h  m+mJavaScriptService  m+mJavaScriptService.cpp  m+mJavaScriptService.h  (+10 more)
Parser/: CMakeLists.txt  M+MBaseMatcher.cpp  M+MBaseMatcher.h  M+MBaseNameValidator.cpp  M+MBaseNameValidator.h  M+MMatchConstraint.cpp  M+MMatchConstraint.h  M+MMatchExpression.cpp  M+MMatchExpression.h  M+MMatchFieldName.cpp  M+MMatchFieldName.h  M+MMatchFieldWithValues.cpp  M+MMatchFieldWithValues.h  M+MMatchValue.cpp  M+MMatchValue.h  M+MMatchValueList.cpp  M+MMatchValueList.h  M+MParserTest.cpp  M+MTestNameValidator.cpp  M+MTestNameValidator.h  MoMeBaseMatcher.cpp  MoMeBaseMatcher.h  MoMeBaseNameValidator.cpp  MoMeBaseNameValidator.h  (+36 more)
(+4050 files in other folders)
